Feat: topbar & sidebar publishing (0819)

--- a/mc_web_console_new_front/src/app/language/en.json
+++ b/mc_web_console_new_front/src/app/language/en.json
@@ -15,5 +15,8 @@
     "ACCOUNT_AND_ACCESS_ORGANIZATIONS": "Organizations",
     "ACCOUNT_AND_ACCESS_CONTROL": "Access Control",
     "ACCOUNT_AND_ACCESS_WORKSPACE_SETTINGS": "Workspace Settings"
+  },
+  "WORKSPACE": {
+    "WORKSPACE": "Workspace"
   }
 }
