--- a/mc_web_console_new_front/src/app/i18n/en.json
+++ b/mc_web_console_new_front/src/app/i18n/en.json
@@ -14,6 +14,9 @@
     "TEXT_INPUT": {
         "SHOW" : "SHOW",
         "HIDE" : "HIDE"
+    },
+    "QUERY_SEARCH_TAGS": {
+      "CLEAR_ALL": "CLEAR"
     }
   }
 }
