refactor : addUser validate logic

--- a/mc_web_console_new_front/src/app/i18n/en.json
+++ b/mc_web_console_new_front/src/app/i18n/en.json
@@ -10,6 +10,11 @@
       "EMAIL_INVALID": "Invalid email address"
     }
   },
+  "USER": {
+    "REGISTER": {
+      "PASSWORD_CONFIRM" : "Please check confirm password"
+    }
+  },
   "COMPONENT": {
     "TEXT_INPUT": {
       "SHOW": "SHOW",
