--- a/mc_web_console_new_front/src/app/i18n/en.json
+++ b/mc_web_console_new_front/src/app/i18n/en.json
@@ -24,17 +24,28 @@
     "LOGIN": {
       "_NAME": "LOGIN",
       "USER_ID": "User ID",
-      "USER_ID_REQUIRED" : "please enter id",
+      "USER_ID_REQUIRED": "please enter id",
       "PASSWORD": "Password",
-      "PASSWORD_REQUIRED" : "please enter password",
-      "PASSWORD_INCLUDE_SPACES" : "Password must not contain spaces",
-      "EMAIL_INVALID" : "Invalid email address"
+      "PASSWORD_REQUIRED": "please enter password",
+      "PASSWORD_INCLUDE_SPACES": "Password must not contain spaces",
+      "EMAIL_INVALID": "Invalid email address"
+    }
+  },
+  "USER": {
+    "REGISTER": {
+      "PASSWORD_CONFIRM" : "Please check confirm password"
     }
   },
   "COMPONENT": {
     "TEXT_INPUT": {
-        "SHOW" : "SHOW",
-        "HIDE" : "HIDE"
+      "SHOW": "SHOW",
+      "HIDE": "HIDE"
+    },
+    "QUERY_SEARCH_TAGS": {
+      "CLEAR_ALL": "CLEAR"
+    },
+    "DATA_TABLE": {
+      "NO_DATA" : "NO_DATA"
     }
   }
 }
