Design: Component change (0904)

--- a/mc_web_console_new_front/src/app/i18n/en.json
+++ b/mc_web_console_new_front/src/app/i18n/en.json
@@ -46,6 +46,9 @@
     },
     "DATA_TABLE": {
       "NO_DATA" : "NO_DATA"
+    },
+    "FIELD_GROUP": {
+      "OPTIONAL": "optional"
     }
   }
 }
