feat : workspace list, workspace delete

--- a/mc_web_console_new_front/src/app/i18n/en.json
+++ b/mc_web_console_new_front/src/app/i18n/en.json
@@ -46,6 +46,10 @@
     },
     "DATA_TABLE": {
       "NO_DATA" : "NO_DATA"
+    },
+    "BUTTON_MODAL": {
+      "CANCEL" : "Cancel",
+      "CONFIRM" : "OK"
     }
   }
 }
