feat : user edit modal

--- a/mc_web_console_new_front/src/app/i18n/en.json
+++ b/mc_web_console_new_front/src/app/i18n/en.json
@@ -50,6 +50,10 @@
     "BUTTON_MODAL": {
       "CANCEL" : "Cancel",
       "CONFIRM" : "OK"
+    },
+    "CONTEXT_MENU": {
+      "SHOW_MORE" : "show more",
+      "NO_ITEM" : "NO ITEM"
     }
   }
 }
