Feat: vpc page api connected updated (0910)

--- a/mc_web_console_new_front/src/app/i18n/en.json
+++ b/mc_web_console_new_front/src/app/i18n/en.json
@@ -145,7 +145,8 @@
       "CANCEL" : "Cancel",
       "CONFIRM" : "OK",
       "REMOVE": "Remove",
-      "EDIT": "Edit"
+      "EDIT": "Edit",
+      "APPLY": "Apply"
     },
     "CONTEXT_MENU": {
       "SHOW_MORE" : "show more",
