page: mci Detail table

--- a/mc_web_console_new_front/src/app/i18n/en.json
+++ b/mc_web_console_new_front/src/app/i18n/en.json
@@ -148,7 +148,9 @@
     "CONTEXT_MENU": {
       "SHOW_MORE" : "show more",
       "NO_ITEM" : "NO ITEM"
+    },
+    "DEFINITION_TABLE": {
+      "NO_DATA" : "NO DATA"
     }
   }
 }
-
